# CAS_project

./: .gitignore  .gitmodules  MPC_def.py  README.md  bugbot_viz.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bugbot_urdf_description/lib/bugbot_urdf_description/: state_publisher
install/bugbot_urdf_description/share/bugbot_urdf_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  state_publisher.launch.py
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: package.ps1  package.sh
install/sensor_fusion/lib/sensor_fusion/: kalman
log/: latest_build
src/MPC_controller/: MPC.py  MPC_algorithm.py  MPC_def.py
src/bugbot_urdf_description/: model.config  package.xml  setup.cfg  setup.py
src/bugbot_urdf_description/launch/: state_publisher.launch.py
src/bugbot_urdf_description/meshes/: BugBotBodyV3.STL
src/bugbot_urdf_description/urdf/: bugbot_description.urdf  bugbot_viz.rviz2
src/cas_project/: CMakeLists.txt  package.xml
src/cas_project/launch/: nodes_launch.py
src/cas_project/src/: global_path_publisher_member_function.cpp  kalman_odom_pub.cpp  odom_pub_simulation.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/mpc_package/: package.xml  setup.cfg  setup.py
src/mpc_package/mpc_package/: MPC.py  MPC_algorithm.py  MPC_def.py  mpc_node.py
src/path_publisher/: package.xml  setup.cfg  setup.py
src/path_publisher/path_publisher/: path_publisher_node.py
src/sensor_fusion/: package.xml  setup.py
src/sensor_fusion/sensor_fusion/: kalman.py
(+7 files in other folders)
